Add login view and configure JavaFX module setup